Himarket release v0.50 (#93)
* feat: Add ProductConfig reload API

Change-Id: Ideb177089d9e1c50166ebea4ed93babe6e9ddb94

* chat v1

Change-Id: Iabde23e39c1763d30b1e202083fb03bdbed8f133

* feat: 新版重构

* fix: chat

Change-Id: Iaae1a8cc0583c5af0b2d969299c4120e8ba8fa1d

* chore: 完善 Chat

Change-Id: I9e693a95a5de9543fcb54ca71108c69359361f19

* feat: 新版重构

Change-Id: I9b9465fa03fd86abdaf9d30e67aa3f37559f76e4

* chore: UI 风格调整

Change-Id: Icd7b6dd87255378bf10ce27bd4d2c14abef13b3c

fix: update backend URL variable for API proxy configuration

Change-Id: I5d68d7d3a781bdcc231c5a6319e93ab0a275bf8f

* fix: support usage

Change-Id: I89e9c45c9240fe841ebacb416b5aefa58907b62d

* fix: support usage

Change-Id: Iee0dd95cbdd0ae695017bfec84792cefff8993c4

* feat: markdown 渲染回复信息

Change-Id: I899dbcd001e1f064d690a0e90c97579326df2e25

* fix: nginx cache

Change-Id: Id1346a16ff1aa33ff5ab6d34599831e7f54630a1

* 支持搜索引擎配置管理，支持GOOGLE 搜索能力

Change-Id: If45352ef74d528e5efe73e9928acd61cf2e3823f

* chore: 完善 Chat 对话

Change-Id: I010abf55cebda057f727e8ad6e32b7727b2aaa31

* 调整代码目录结构

Change-Id: I5169871854aaee3862d89fa44e17bd497b182efd

* fix: update to jdk17 and springboot 3.x

Change-Id: I83527f26af141d51566f447f10a6137d0e6780df

* fix: add credential before calling model

Change-Id: I68735908b57addeb137602ea74b6178746372e22

* fix: support model feature

Change-Id: I796b610f019e5f1dc3ba8afa884d1e0f6ef02824

* fix: model feature

Change-Id: I85a140f28984b6516643d9ea4082f2d93bc6c90d

* fix: add first package time

Change-Id: I28bd6d3b460f2e6088c707e17d76845a6d23fb8a

* 联网搜索功能支持

Change-Id: Ibed96a7fcc0e78aa8c6053ca330b974c9e66b5db

* 支持搜索引擎配置管理，支持GOOGLE 搜索能力

Change-Id: If45352ef74d528e5efe73e9928acd61cf2e3823f

* 调整代码目录结构

Change-Id: I5169871854aaee3862d89fa44e17bd497b182efd

* 联网搜索功能支持

Change-Id: Ibed96a7fcc0e78aa8c6053ca330b974c9e66b5db

* feat: 统一请求规范 & 统一消费者管理页面 UI

Change-Id: I9b8f176944688b07d0850e6f8f5069e54eafb6c0

* fix: sse

Change-Id: I0a96c40315a055a8fc799b7d873b4cf085d16de8

* feat